--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "buffer": "^6.0.3",
+        "dompurify": "^2.4.0",
         "marked": "^4.1.0",
         "svelte-spa-router": "^3.3.0"
     }
